utilities-app/src/App.css
/* ... */
.Profile {
  width: fit-content;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}


.Profile-header {

  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  width: fit-content;
  height: fit-content;
  margin: 10px;
  height: 12rem;

}

.Profile-title {

  font-size: 25px;
  display: flex;
  margin: 10px;
  margin-bottom: 0px;
  justify-content: flex-start;
  align-items: center;
  color: #c4cad3;
  font-family: 'Lexend Deca', sans-serif;
}

.Profile-desc {

  font-size: 15px;
  padding: 10px;
  display: flex;
  justify-content: flex-start;
  align-items: center;
  color: #c4cad3;
  font-family: 'Lexend Deca', sans-serif;
  font-weight: 400;
}

.Profile-img img {

  flex: 1;
  justify-content: center;
  align-items: center;
  width: 150px;
  height: 150px;
  border-radius: 50%;
  color: #000000;
  align-items: flex-end;
  justify-content: flex-end;
  margin-left: 10rem;
  border: 5px solid #1DB954;
  ;
}

.Profile-operations {
  display: flex;
  width: 100%;
  margin: 10px;
  padding: 10px;
  flex-direction: column;
  align-items: flex-start;
  justify-content: center;
  text-align: flex-start;

}

.Profile-operations span {
  margin: 10px;
  font-size: 15px;
  font-family: 'Lexend Deca', sans-serif;
}

.delete-account, .delete-account-real {
  display: flex;
  height: 45px;
  width: fit-content;
  margin: 10px;
  padding: 10px;
  background-color: transparent;
  color: #fd0000;
  border: none;
  border-radius: 10px;
  font-family: 'Lexend Deca', sans-serif;
  font-weight: 600;
  font-size: 15px;
  cursor: pointer;
  justify-content: center;
  align-items: center;
  border: 2px solid #fd0000;
}

.delete-account-real {

  display: flex;
  justify-content: center;
  align-items: center;
  margin: 0 auto;
  
}

.Profile-operations button:hover, .delete-account-real:hover {
  transition: 0.5s ease-in;
  background-color: #fd0000;
  color: #000000;
}

.Profile-operations .AccountsButton {
  margin: 10px;
}

.sidebar {

  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: center;
  text-align: center;
  width: 165px;
  min-height: 100vh;
  position: fixed;
  top: 0;
  left: 0;
  z-index: 999;
  transition: width 0.3s ease-in-out;
  overflow: hidden;
}

.sidebar.collapsed {
  width: 80px;
  display: flex;
  align-items: center;
  justify-items: center;
}

.sidebar.collapsed .sidebarText {

  opacity: 0;
  display: none;
  transition-delay: 0s;
}

.sidebar-item {

  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  width: fit-content;
  padding: 10px 10px;
  margin: 10px 10px 10px 10px;
  font-family: 'Lexend Deca', sans-serif;
  font-weight: 500;
  font-style: bold;
  font-size: 14px;
  transition: all 0.5s ease;
  cursor: pointer;

}

.sidebarText {
  margin-left: 10px;
  opacity: 1;
  visibility: visible;
  transition: opacity 0.5s ease-in-out, visibility 0.2s ease-in-out;
  white-space: nowrap;
  transition-delay: 0.5s;
}

.sidebar-item:hover {
  color: #1DB954;
}

.sidebar-item.active {

  color: #18181b;
  background-color: #1DB954;
  border-radius: 14px;

}

#SidebarHome {

  margin-top: 120px;

}

#SidebarHide {

  margin-top: 320px;
  margin-bottom: 70px;

}

.MainContent {

  display: flex;
  width: calc(100% - 380px);
  justify-content: center;
  align-items: flex-start;
  margin: 0 auto;
  padding: 20px;
  margin-top: 50px;
  padding-bottom: 100px;
  transition: width 0.3s ease;
  box-sizing: border-box;

}

.sidebar.collapsed+.MainContent {
  width: calc(100% - 280px);
}

.Dashboard-container {

  flex: 1;
  width: 100%;
  flex-direction: column;
  margin: 0 auto;
  align-items: center;
  justify-content: center;
  display: flex;

}

.LocationInput {

  border: none;
  border-top-left-radius: 10px;
  border-bottom-left-radius: 10px;
  height: 100%;
  max-width: 100%;
  padding: 10px;
  border-bottom: 2px solid #3d423d;
  border-top: 2px solid #3d423d;
  border-left: 2px solid #3d423d;

}

.LocationInput:focus {
  outline: none;
  background-color: transparent;
}

.LocationSearch {
  display: flex;
  justify-content: center;
  align-items: center;
  color: #09f55b;
  height: 100%;
  width: 50px;
  border-top-right-radius: 10px;
  border-bottom-right-radius: 10px;
  border: none;
  cursor: pointer;
  border-bottom: 2px solid #3d423d;
  border-top: 2px solid #3d423d;
  border-right: 2px solid #3d423d;

}

.LocationSearch:hover {
  background-color: #1DB954;
  color: #0f1011;
}

.location {
  display: flex;
  flex-direction: row;
  border: none;
  color: #09f55b;
  border-radius: 10px;
  height: 40px;
  font-size: 15px;
  width: 100%;
}

.AccountsButton {
  display: flex;
  height: 40px;
  width: fit-content;
  justify-content: center;
  align-items: center;
  color:black;
  background-color: #1DB954;
  font-family: 'Lexend Deca', sans-serif;
  font-weight: 500;
  border: none;
  border-radius: 10px;
  cursor: pointer;
  padding-left: 15px;
  padding-right: 15px;
  margin-right: 20px;
  transition: all 0.5s ease-in-out;
}

.AccountsButton:hover {
  background-color: #1DB954;
  color: #0f1011;
}

.EventDateTime {

  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  margin-left: 5px;
  align-items: center;
  border-radius: 10px;

}

.section-title {
  display: flex;
  font-size: 13px;
  margin-top: 10px;
  margin-bottom: 10px;
  margin-left: 5px;
  font-family: 'Lexend Deca', sans-serif;
  font-weight: 500;
  color: #1DB954;
  width: 100%;
  align-items: flex-start;
}

.calenderButton {

  border: none;
  border-radius: 15px;
  width: fit-content;
  cursor: pointer;
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 10px;
  font-style: 'Inter', sans-serif;
  font-size: 15px;
  font-weight: 500;
  margin: 10px;
  background-color: #1DB954;
  transition: transform 0.3s ease, background-color 0.3s ease;

}

.calenderButton:hover {
  background-color: #17a34a;

}
/* ... */

